Fixed question pages
The question page checkbox will no longer appear on a different site when
the text was too long

--- a/ressources/app.css
+++ b/ressources/app.css
@@ -4,6 +4,10 @@
     right: 10px;
 }
 
-.resultPanel .x-html{
+.resultPanel .x-html {
     height: 100%;
+}
+
+.questionLabel .x-form-label {
+    white-space: normal !important;
 }
